WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
298897
AX: When running tests, force default accessibility settings to avoid failures due to the machine's local settings
https://bugs.webkit.org/show_bug.cgi?id=298897
Summary
AX: When running tests, force default accessibility settings to avoid failure...
Tyler Wilcock
Reported
2025-09-15 14:25:14 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-09-15 14:25:27 PDT
<
rdar://problem/160640731
>
Tyler Wilcock
Comment 2
2025-09-15 14:25:47 PDT
rdar://148661873
Tyler Wilcock
Comment 3
2025-09-15 14:30:39 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/50768
EWS
Comment 4
2025-09-15 21:28:29 PDT
Committed
300007@main
(71884ba62817): <
https://commits.webkit.org/300007@main
> Reviewed commits have been landed. Closing PR #50768 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug