AX: When running tests, force default accessibility settings to avoid failures due to the machine's local settings https://bugs.webkit.org/show_bug.cgi?id=298897 rdar://148661873

Reviewed by Joshua Hoffman.

Add a new ForceDefaultAccessibilitySettings defaults value and read it in new AXPreferenceHelpers methods to avoid
calling into accessibility frameworks for the system-local setting value.

* Source/WebKit/Shared/AccessibilityPreferences.h:
* Source/WebKit/Shared/Cocoa/AccessibilityPreferences.mm: Added.
(AXPreferenceHelpers::shouldUseDefault):
(AXPreferenceHelpers::reduceMotionEnabled):
(AXPreferenceHelpers::increaseButtonLegibility):
(AXPreferenceHelpers::enhanceTextLegibility):
(AXPreferenceHelpers::darkenSystemColors):
(AXPreferenceHelpers::invertColorsEnabled):
(AXPreferenceHelpers::imageAnimationEnabled):
(AXPreferenceHelpers::enhanceTextLegibilityOverall):
(AXPreferenceHelpers::prefersNonBlinkingCursor):
* Source/WebKit/Shared/Cocoa/AuxiliaryProcessCocoa.mm:
* Source/WebKit/SourcesCocoa.txt:
* Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _allowAnimationControls]):
* Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::accessibilityPreferences):
* Source/WebKit/WebKit.xcodeproj/project.pbxproj:
* Tools/WebKitTestRunner/mac/main.mm:
(setDefaultsToConsistentValuesForTesting):

Canonical link: https://commits.webkit.org/300007@main